# private-below-threshold-triangle-counting

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.cpp  graph.dot  graph_generator  main.cpp  negative_triangle_count.cpp  noisy_graph.dot
benchmark/: bench_gmwcs_lambda_-530_20_1_1_1_-530_20260117_1301.json
data/: GMWCS.csv  MItoMI-2013-11-03-G-278.csv  MItoMI-2013-11-03-G-400.csv  istanbul_traffic.csv
include/: basic_counting.h  basic_counting.hpp  benchmark_utils.h  counting.h  distance_retrieval.h  distribution.h  distribution.hpp  global_sensitivity.h  graph_generation.h  graph_generation.hpp  graph_statistics.h  logger.h  qp_counting.h  smooth_sens_unbiased.h  smooth_sens_utils.h  smooth_sensitivity.h  smooth_sensitivity_unbiased.h  treap.h  triangle.h  utils.h  utils.hpp
paper_results/: bench_telecom-278-size-100.json  bench_telecom-278-size-150.json  bench_telecom-278-size-200.json  bench_telecom-278-size-250.json  bench_telecom-278-size-50.json  bench_telecom-278_count_eps_1_0_0.1_0.1_24_20251026_1025.json  bench_telecom-278_count_eps_1_0_0.1_0.1_4_20251026_1020.json  bench_telecom-278_count_eps_1_0_0.2_0.2_24_20251026_1025.json  bench_telecom-278_count_eps_1_0_0.2_0.2_4_20251026_1020.json  bench_telecom-278_count_eps_1_0_0.5_0.5_24_20251026_1025.json  bench_telecom-278_count_eps_1_0_0.5_0.5_4_20251026_1021.json  bench_telecom-278_count_eps_1_0_1_0.1_24_20251025_2012.json  bench_telecom-278_count_eps_1_0_1_0.5_24_20251025_2012.json  bench_telecom-278_count_eps_1_0_1_1_24_20251025_2012.json  bench_telecom-278_count_eps_1_0_1_1_24_20251026_1025.json  bench_telecom-278_count_eps_1_0_1_1_4_20251026_1022.json  bench_telecom-278_count_eps_1_0_1_2_24_20251025_2012.json  bench_telecom-278_count_eps_1_0_2_2_24_20251026_1025.json  bench_telecom-278_count_eps_1_0_2_2_4_20251026_1022.json  bench_telecom-278_count_eps_1_0_4_4_4_20251026_1327.json  bench_telecom-278_count_eps_1_0_5_5_4_20251026_1327.json  bench_telecom-278_instance_size_100_1_0_1_1_4_20251026_1409.json  bench_telecom-278_instance_size_150_1_0_1_1_4_20251026_1409.json  bench_telecom-278_instance_size_200_1_0_1_1_4_20251026_1410.json  bench_telecom-278_instance_size_250_1_0_1_1_4_20251026_1411.json  bench_telecom-278_instance_size_50_1_0_1_1_4_20251026_1409.json  bench_telecom-278_lambda_1_0_1_1_0_20251025_2008.json  bench_telecom-278_lambda_1_0_1_1_0_20251026_0916.json  bench_telecom-278_lambda_1_0_1_1_10_20251025_2009.json  bench_telecom-278_lambda_1_0_1_1_10_20251026_0917.json  bench_telecom-278_lambda_1_0_1_1_1_20251026_1046.json  bench_telecom-278_lambda_1_0_1_1_24_20251025_2010.json  bench_telecom-278_lambda_1_0_1_1_24_20251026_0917.json  bench_telecom-278_lambda_1_0_1_1_2_20251026_1046.json  bench_telecom-278_lambda_1_0_1_1_4_20251025_2008.json  bench_telecom-278_lambda_1_0_1_1_4_20251026_0916.json  bench_telecom-278_lambda_1_0_1_1_62_20251025_2011.json  bench_telecom-278_lambda_1_0_1_1_62_20251026_0917.json  bench_telecom-278_weight_eps_1_0_0.1_1_24_20251025_2012.json  bench_telecom-278_weight_eps_1_0_0.5_1_24_20251025_2012.json  (+2 more)
src/: basic_counting.cpp  benchmark.cpp  counting.cpp  distance_retrieval.cpp  distribution.cpp  global_sensitivity.cpp  graph_generation.cpp  graph_statistics.cpp  qp_counting.cpp  smooth_sens_biased.cpp  smooth_sens_unbiased.cpp  smooth_sens_utils.cpp  smooth_sensitivity.cpp  smooth_sensitivity_unbiased.cpp  snap_benchmark.cpp  utils.cpp
test/: assignment_test.cpp  counting_test.cpp  distance_test.cpp  distribution_test.cpp  graph_presets.h  sensitivity_test.cpp  smooth_sens_unb_test.cpp  treap_test.cpp  triangle_test.cpp
